Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/neo4j.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/neo4j.adoc.po
@@ -358,7 +358,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/neo4j.adoc:163
 #, no-wrap
 msgid "Configuring"
-msgstr ""
+msgstr "設定"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/neo4j.adoc:166
@@ -369,7 +369,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/neo4j.adoc:168
 #, no-wrap
 msgid "src/main/resources/application.properties"
-msgstr ""
+msgstr "src/main/resources/application.properties"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/neo4j.adoc:173
