--- a/l10n/po/ja_JP/_versions/1.11/guides/security-keycloak-authorization.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security-keycloak-authorization.adoc.po
@@ -28,7 +28,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:11
 msgid "This guide demonstrates how your Quarkus application can authorize a bearer token access to protected resources using https://www.keycloak.org/docs/latest/authorization_services/index.html[Keycloak Authorization Services]."
-msgstr ""
+msgstr "このガイドでは、Quarkusアプリケーションが link:https://www.keycloak.org/docs/latest/authorization_services/index.html[Keycloak Authorization Services] を使用して保護されたリソースへのベアラートークンアクセスを認証する方法を説明します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:15
@@ -48,7 +48,7 @@ msgstr "`Bearer Token` 認証メカニズムの詳細については、 link:sec
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:22
 msgid "If you are already familiar with Keycloak, you’ll notice that the extension is basically another adapter implementation but specific for Quarkus applications.  Otherwise, you can find more information in the Keycloak https://www.keycloak.org/docs/latest/authorization_services/index.html#_enforcer_overview[documentation]."
-msgstr ""
+msgstr "すでにKeycloakに慣れ親しんでいる方は、このエクステンションは基本的にはアダプターの別実装ですが、Quarkusアプリケーションに特化したものであることにお気づきでしょう。それ以外の場合は、Keycloakの link:https://www.keycloak.org/docs/latest/authorization_services/index.html#_enforcer_overview[ドキュメント] を参照してください。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:23
@@ -89,7 +89,7 @@ msgstr "https://stedolan.github.io/jq/[jq tool]"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:33
 msgid "https://www.keycloak.org/docs/latest/server_installation/index.html[Keycloak]"
-msgstr ""
+msgstr "https://www.keycloak.org/docs/latest/server_installation/index.html[Keycloak]"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:34
@@ -105,7 +105,7 @@ msgstr "アーキテクチャ"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:38
 msgid "In this example, we build a very simple microservice which offers two endpoints:"
-msgstr ""
+msgstr "この例では、2つのエンドポイントを提供する非常にシンプルなマイクロサービスを構築しています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:40
@@ -168,12 +168,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:66
 #, no-wrap
 msgid "Creating the Project"
-msgstr ""
+msgstr "プロジェクトの作成"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:70
 msgid "First, we need a new project.  Create a new project with the following command:"
-msgstr ""
+msgstr "まず、新しいプロジェクトが必要です。以下のコマンドで新規プロジェクトを作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:79
@@ -601,12 +601,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:304
 #, no-wrap
 msgid "Checking Permissions Programmatically"
-msgstr ""
+msgstr "プログラムで権限をチェックする"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:308
 msgid "In some cases, you may want to programmatically check whether or not a request is granted to access a protected resource. By injecting a `SecurityIdentity` instance in your beans, you are allowed to check permissions as follows:"
-msgstr ""
+msgstr "場合によっては、保護されたリソースにアクセスするためのリクエストが許可されているかどうかを プログラムでチェックしたいこともあるでしょう。Beanに `SecurityIdentity` インスタンスを注入することで、以下のようにパーミッションをチェックすることができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:313
@@ -637,17 +637,17 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:331
 #, no-wrap
 msgid "Mapping Protected Resources"
-msgstr ""
+msgstr "保護リソースのマッピング"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:334
 msgid "By default, the extension is going to fetch resources on-demand from Keycloak where their `URI` are used to map the resources in your application that should be protected."
-msgstr ""
+msgstr "デフォルトでは、エクステンションは Keycloak からオンデマンドでリソースを取得します。 `URI` は、保護されるべきアプリケーション内のリソースをマップするために使用されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:336
 msgid "If you want to disable this behavior and fetch resources during startup, you can use the following configuration:"
-msgstr ""
+msgstr "この動作を無効にして、起動時にリソースをフェッチしたい場合は、以下の設定を使用します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:340
@@ -658,23 +658,23 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:343
 msgid "Note that, depending on how many resources you have in Keycloak the time taken to fetch them may impact your application startup time."
-msgstr ""
+msgstr "Keycloakにあるリソースの数によっては、それらを取得するのにかかる時間がアプリケーションの起動時間に影響することに注意してください。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:344
 #, no-wrap
 msgid "More About Configuring Protected Resources "
-msgstr ""
+msgstr "保護されたリソースの設定についてさらに詳しく"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:347
 msgid "In the default configuration, Keycloak is responsible for managing the roles and deciding who can access which routes."
-msgstr ""
+msgstr "デフォルトの構成では、Keycloakはロールを管理し、誰がどのルートにアクセスできるかを決定します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:349
 msgid "To configure the protected routes using the `@RolesAllowed` annotation or the `application.properties` file, check the link:security-openid-connect[Using OpenID Connect Adapter to Protect JAX-RS Applications] guide. For more details, check the link:security[Security guide]."
-msgstr ""
+msgstr "`@RolesAllowed` アノテーションまたは `application.properties` ファイルを使用して保護されたルートを構成するには、「 link:security-openid-connect[Using OpenID Connect Adapter to Protect JAX-RS Applications] 」ガイドを確認してください。詳細については、 link:security[セキュリティー] ガイドを確認してください。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:350
@@ -685,7 +685,7 @@ msgstr "設定リファレンス"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:353
 msgid "The configuration is based on the official https://www.keycloak.org/docs/latest/authorization_services/index.html#_enforcer_filter[Keycloak Policy Enforcer Configuration]. If you are looking for more details about the different configuration options, please take a look at this documentation,"
-msgstr ""
+msgstr "この設定は、 link:https://www.keycloak.org/docs/latest/authorization_services/index.html#_enforcer_filter[Keycloak Policy Enforcer] の公式設定に基づいています。異なる設定オプションについての詳細をお探しの方は、こちらのドキュメントをご覧ください。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/security-keycloak-authorization.adoc:356
