--- a/l10n/po/ja_JP/_versions/1.7/guides/neo4j.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/neo4j.adoc.po
@@ -356,7 +356,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/neo4j.adoc:162
 #, no-wrap
 msgid "Configuring"
-msgstr ""
+msgstr "設定"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/neo4j.adoc:165
@@ -367,7 +367,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/neo4j.adoc:167
 #, no-wrap
 msgid "src/main/resources/application.properties"
-msgstr ""
+msgstr "src/main/resources/application.properties"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/neo4j.adoc:172
