--- a/l10n/po/ja_JP/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc.po
@@ -135,7 +135,7 @@ msgstr "この新機能の詳細は、 link:/guides/datasource#devservices-confi
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:43
 #, no-wrap
 msgid "OpenTelemetry Extension"
-msgstr "OpenTelemetry Extension"
+msgstr "OpenTelemetry エクステンション"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:46
