Replace "Contributer" translations

--- a/l10n/po/ja_JP/_posts/2019-06-27-quarkus-0-18-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-06-27-quarkus-0-18-released.adoc.po
@@ -162,9 +162,8 @@ msgstr "この link:https://github.com/quarkusio/quarkus/releases/tag/0.18.0[リ
 
 #. type: Title ==
 #: upstream/_posts/2019-06-27-quarkus-0-18-released.adoc:54
-#, fuzzy, no-wrap
 msgid "Contributors"
-msgstr "投稿者"
+msgstr "コントリビューター"
 
 #. type: Plain text
 #: upstream/_posts/2019-06-27-quarkus-0-18-released.adoc:58
