--- a/l10n/po/ja_JP/_posts/2019-07-11-quarkus-0-19.1-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-07-11-quarkus-0-19.1-released.adoc.po
@@ -228,9 +228,8 @@ msgstr "0.19.0をリリースしている間にGradleのサポートにリグレ
 
 #. type: Title ==
 #: upstream/_posts/2019-07-11-quarkus-0-19.1-released.adoc:78
-#, fuzzy, no-wrap
 msgid "Contributors"
-msgstr "投稿者"
+msgstr "コントリビューター"
 
 #. type: Plain text
 #: upstream/_posts/2019-07-11-quarkus-0-19.1-released.adoc:82
