--- a/l10n/po/ja_JP/_posts/2019-09-05-quarkus-0-21-2-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-09-05-quarkus-0-21-2-released.adoc.po
@@ -74,9 +74,8 @@ msgstr "興味深いことがたくさんありますので、ご期待くださ
 
 #. type: Title ==
 #: upstream/_posts/2019-09-05-quarkus-0-21-2-released.adoc:20
-#, fuzzy, no-wrap
 msgid "Contributors"
-msgstr "投稿者"
+msgstr "コントリビューター"
 
 #. type: Plain text
 #: upstream/_posts/2019-09-05-quarkus-0-21-2-released.adoc:24
