--- a/l10n/po/ja_JP/_posts/2019-10-02-quarkus-0-23-2-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-10-02-quarkus-0-23-2-released.adoc.po
@@ -104,9 +104,8 @@ msgstr "また、いくつかのバグやユーザービリティの問題も修
 
 #. type: Title ==
 #: upstream/_posts/2019-10-02-quarkus-0-23-2-released.adoc:37
-#, fuzzy, no-wrap
 msgid "Contributors"
-msgstr "投稿者"
+msgstr "コントリビューター"
 
 #. type: Plain text
 #: upstream/_posts/2019-10-02-quarkus-0-23-2-released.adoc:41
