--- a/l10n/po/ja_JP/_posts/2019-10-16-quarkus-0-25.0-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-10-16-quarkus-0-25.0-released.adoc.po
@@ -188,9 +188,8 @@ msgstr "また、いくつかのバグやユーザービリティの問題も修
 
 #. type: Title ==
 #: upstream/_posts/2019-10-16-quarkus-0-25.0-released.adoc:57
-#, fuzzy, no-wrap
 msgid "Contributors"
-msgstr "投稿者"
+msgstr "コントリビューター"
 
 #. type: Plain text
 #: upstream/_posts/2019-10-16-quarkus-0-25.0-released.adoc:61
