--- a/l10n/po/ja_JP/_posts/2019-10-30-quarkus-0-27-0-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-10-30-quarkus-0-27-0-released.adoc.po
@@ -212,9 +212,8 @@ msgstr "また、バグやユーザービリティの問題も修正しました
 
 #. type: Title ==
 #: upstream/_posts/2019-10-30-quarkus-0-27-0-released.adoc:73
-#, fuzzy, no-wrap
 msgid "Contributors"
-msgstr "投稿者"
+msgstr "コントリビューター"
 
 #. type: Plain text
 #: upstream/_posts/2019-10-30-quarkus-0-27-0-released.adoc:77
