--- a/l10n/po/ja_JP/_posts/2019-11-04-quarkus-0-28-1-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-11-04-quarkus-0-28-1-released.adoc.po
@@ -159,9 +159,8 @@ msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/0.28.0[0.28.0 の
 
 #. type: Title ==
 #: upstream/_posts/2019-11-04-quarkus-0-28-1-released.adoc:55
-#, fuzzy, no-wrap
 msgid "Contributors"
-msgstr "投稿者"
+msgstr "コントリビューター"
 
 #. type: Plain text
 #: upstream/_posts/2019-11-04-quarkus-0-28-1-released.adoc:59
