--- a/l10n/po/ja_JP/_posts/2019-11-20-quarkus-1-0-0-CR2-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-11-20-quarkus-1-0-0-CR2-released.adoc.po
@@ -80,9 +80,8 @@ msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.0.0.CR2[1.0.0.0
 
 #. type: Title ==
 #: upstream/_posts/2019-11-20-quarkus-1-0-0-CR2-released.adoc:22
-#, fuzzy, no-wrap
 msgid "Contributors"
-msgstr "投稿者"
+msgstr "コントリビューター"
 
 #. type: Plain text
 #: upstream/_posts/2019-11-20-quarkus-1-0-0-CR2-released.adoc:26
