--- a/l10n/po/ja_JP/_posts/2019-12-23-quarkus-1-1-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-12-23-quarkus-1-1-0-final-released.adoc.po
@@ -313,9 +313,8 @@ msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.1.0.CR1[1.1.1.0
 
 #. type: Title ==
 #: upstream/_posts/2019-12-23-quarkus-1-1-0-final-released.adoc:98
-#, fuzzy, no-wrap
 msgid "Contributors"
-msgstr "投稿者"
+msgstr "コントリビューター"
 
 #. type: Plain text
 #: upstream/_posts/2019-12-23-quarkus-1-1-0-final-released.adoc:102
