--- a/l10n/po/ja_JP/_posts/2020-01-07-quarkus-1-1-1-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-01-07-quarkus-1-1-1-final-released.adoc.po
@@ -98,9 +98,8 @@ msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.1.1.Final[1.1.1
 
 #. type: Title ==
 #: upstream/_posts/2020-01-07-quarkus-1-1-1-final-released.adoc:30
-#, fuzzy, no-wrap
 msgid "Contributors"
-msgstr "投稿者"
+msgstr "コントリビューター"
 
 #. type: Plain text
 #: upstream/_posts/2020-01-07-quarkus-1-1-1-final-released.adoc:34
