--- a/l10n/po/ja_JP/_posts/2019-09-26-quarkus-0-23-1-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-09-26-quarkus-0-23-1-released.adoc.po
@@ -290,9 +290,8 @@ msgstr "また、いくつかのバグや使い勝手の問題も修正しまし
 
 #. type: Title ==
 #: upstream/_posts/2019-09-26-quarkus-0-23-1-released.adoc:94
-#, fuzzy, no-wrap
 msgid "Contributors"
-msgstr "投稿者"
+msgstr "コントリビューター"
 
 #. type: Plain text
 #: upstream/_posts/2019-09-26-quarkus-0-23-1-released.adoc:98
