Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security-jwt.adoc.po
@@ -185,7 +185,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-jwt.adoc:91
 msgid "This is a basic REST endpoint that does not have any of the {extension-name} specific features, so let's add some."
-msgstr ""
+msgstr "これは{extension-name}特有の機能を持たない基本的なRESTエンドポイントなので、いくつか追加してみましょう。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/security-jwt.adoc:93
