--- a/l10n/po/ja_JP/_versions/1.7/guides/neo4j.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/neo4j.adoc.po
@@ -262,7 +262,7 @@ msgstr "次の章で紹介する手順に沿って、ステップを踏んでア
 #. type: Plain text
 #: upstream/_versions/1.7/guides/neo4j.adoc:117
 msgid "Clone the Git repository: git clone https://github.com/quarkusio/quarkus-quickstarts.git, or download an archive."
-msgstr ""
+msgstr "Git リポジトリのクローン: git clone https://github.com/quarkusio/quarkus-quickstarts.git 、またはアーカイブをダウンロードしてください。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/neo4j.adoc:120
