--- a/l10n/po/ja_JP/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc.po
@@ -258,14 +258,15 @@ msgstr "Quarkus 1.13には、テストカバレッジレポートを自動的に
 
 #. type: Title ===
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:90
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "@QuarkusIntegrationTest"
-msgstr ""
+msgstr "@QuarkusIntegrationTest"
 
 #. type: Plain text
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:94
+#, fuzzy
 msgid "`@QuarkusIntegrationTest` is the natural evolution of `@NativeImageTest` (which is still supported) and can be used to launch and test the artifact produced by the Quarkus build, and supports testing a jar (of all types), a native binary or container-image.  For more information see link:https://quarkus.io/guides/getting-started-testing#quarkus-integration-test[this] part of the documentation and the Javadoc of the annotation itself."
-msgstr ""
+msgstr "`@QuarkusIntegrationTest` は、 `@NativeImageTest` （現在もサポートされています）を自然に進化させたもので、Quarkusのビルドによって生成されたアーティファクトを起動してテストするために使用することができ、（あらゆるタイプの）jar、ネイティブバイナリ、コンテナイメージのテストをサポートしています。詳細については、ドキュメントの link:https://quarkus.io/guides/getting-started-testing#quarkus-integration-test[この]部分と、アノテーション自体のJavadocを参照してください。"
 
 #. type: Title ===
 #: upstream/_posts/2021-03-30-quarkus-1-13-0-final-released.adoc:95
