Update .po files

--- a/l10n/po/ja_JP/_includes/worldtour-abstracts.html.po
+++ b/l10n/po/ja_JP/_includes/worldtour-abstracts.html.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-03-24 13:13+0000\n"
+"POT-Creation-Date: 2021-04-02 11:07+0000\n"
 "PO-Revision-Date: 2021-03-17 23:43+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -143,60 +143,336 @@ msgstr ""
 
 #. type: Content of: <div><div><div><img><p>
 #: upstream/_includes/worldtour-abstracts.html:66
-msgid "Twitter Post Image - Silicon Valley Java User Group"
+msgid "Twitter Post Image - SouJava Java User Group"
 msgstr ""
 
 #. type: Content of: <div><div><div><img><p>
 #: upstream/_includes/worldtour-abstracts.html:70
-msgid "Twitter Post Image - Kansas City Java Users Group"
+msgid "Twitter Post Image - Silicon Valley Java User Group"
 msgstr ""
 
 #. type: Content of: <div><div><div><img><p>
 #: upstream/_includes/worldtour-abstracts.html:74
-msgid "Twitter Post Image - Manchester Java Community"
+msgid "Twitter Post Image - Kansas City Java Users Group"
 msgstr ""
 
 #. type: Content of: <div><div><div><img><p>
 #: upstream/_includes/worldtour-abstracts.html:78
-msgid "Twitter Post Image - Chicago Java User Group"
+msgid "Twitter Post Image - Manchester Java Community"
 msgstr ""
 
 #. type: Content of: <div><div><div><img><p>
 #: upstream/_includes/worldtour-abstracts.html:82
-msgid "Twitter Post Image - Portugal Java User Group"
+msgid "Twitter Post Image - Chicago Java User Group"
 msgstr ""
 
 #. type: Content of: <div><div><div><img><p>
 #: upstream/_includes/worldtour-abstracts.html:86
-msgid "Twitter Post Image - Paris Java User Group"
+msgid "Twitter Post Image - Portugal Java User Group"
 msgstr ""
 
 #. type: Content of: <div><div><div><img><p>
 #: upstream/_includes/worldtour-abstracts.html:90
-msgid "Twitter Post Image - Seattle Java User Group"
+msgid "Twitter Post Image - Paris Java User Group"
 msgstr ""
 
 #. type: Content of: <div><div><div><img><p>
 #: upstream/_includes/worldtour-abstracts.html:94
-msgid "Twitter Post Image - Latvian Java User Group"
+msgid "Twitter Post Image - JUG Saxony"
 msgstr ""
 
 #. type: Content of: <div><div><div><img><p>
 #: upstream/_includes/worldtour-abstracts.html:98
-msgid "Twitter Post Image - Niš Java User Group"
+msgid "Twitter Post Image - Seattle Java User Group"
 msgstr ""
 
 #. type: Content of: <div><div><div><img><p>
 #: upstream/_includes/worldtour-abstracts.html:102
-msgid "Twitter Post Image - JoziJug (South Africa)"
+msgid "Twitter Post Image - Latvian Java User Group"
 msgstr ""
 
 #. type: Content of: <div><div><div><img><p>
 #: upstream/_includes/worldtour-abstracts.html:106
-msgid "Twitter Post Image - Seoul Java User Group"
+msgid "Twitter Post Image - Niš Java User Group"
 msgstr ""
 
 #. type: Content of: <div><div><div><img><p>
 #: upstream/_includes/worldtour-abstracts.html:110
+msgid "Twitter Post Image - JoziJug (South Africa)"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:114
+msgid "Twitter Post Image - Seoul Java User Group"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:118
 msgid "Twitter Post Image - Warszawa Java User Group"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:122
+msgid "Twitter Post Image - Madrid Java User Group"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:126
+msgid "Twitter Post Image - Singapore Java User Group"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:130
+msgid "Twitter Post Image - Munich Java User Group"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:134
+msgid "Twitter Post Image - Bulgarian Java User Group"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:138
+msgid "Twitter Post Image - Barcelona Java User Group"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:142
+msgid "Twitter Post Image - Beijing Java User Group"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:146
+msgid "Twitter Post Image - NYJavaSIG"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:150
+msgid "Twitter Post Image - JUG Ingolstadt Java User Group"
+msgstr ""
+
+#. type: Content of: <div><div><div><h3>
+#: upstream/_includes/worldtour-abstracts.html:157
+msgid "Slide Presentation Backgrounds"
+msgstr ""
+
+#. type: Content of: <div><div><div><h4>
+#: upstream/_includes/worldtour-abstracts.html:160
+msgid "Slide 1 - Guitar Body"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:164
+msgid "Presentation Background - Slide 1 Title Slide"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:168
+msgid "Presentation Background - Slide 1 Base Slide"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:172
+msgid "Presentation Background - Slide 1 with Quarkus Logo"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:176
+msgid "Presentation Background - Slide 1 with Code Rocks graphic"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:180
+msgid "Presentation Background - Slide 1 with Q&A"
+msgstr ""
+
+#. type: Content of: <div><div><div><h4>
+#: upstream/_includes/worldtour-abstracts.html:183
+msgid "Slide 2 - Stage Lights"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:187
+msgid "Presentation Background - Slide 2 Title Slide"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:191
+msgid "Presentation Background - Slide 2 Base Slide"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:195
+msgid "Presentation Background - Slide 2 with Quarkus Logo"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:199
+msgid "Presentation Background - Slide 2 with Code Rocks graphic"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:203
+msgid "Presentation Background - Slide 2 with Q&A"
+msgstr ""
+
+#. type: Content of: <div><div><div><h4>
+#: upstream/_includes/worldtour-abstracts.html:206
+msgid "Slide 3 - Crowd Surfing"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:210
+msgid "Presentation Background - Slide 3 Title Slide"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:214
+msgid "Presentation Background - Slide 3 Base Slide"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:218
+msgid "Presentation Background - Slide 3 with Quarkus Logo"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:222
+msgid "Presentation Background - Slide 3 with Code Rocks graphic"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:226
+msgid "Presentation Background - Slide 3 with Q&A"
+msgstr ""
+
+#. type: Content of: <div><div><div><h4>
+#: upstream/_includes/worldtour-abstracts.html:229
+msgid "Slide 4 - Drum Kit"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:233
+msgid "Presentation Background - Slide 4 Title Slide"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:237
+msgid "Presentation Background - Slide 4 Base Slide"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:241
+msgid "Presentation Background - Slide 4 with Quarkus Logo"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:245
+msgid "Presentation Background - Slide 4 with Code Rocks graphic"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:249
+msgid "Presentation Background - Slide 4 with Q&A"
+msgstr ""
+
+#. type: Content of: <div><div><div><h4>
+#: upstream/_includes/worldtour-abstracts.html:252
+msgid "Slide 5 - Guitar Neck"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:256
+msgid "Presentation Background - Slide 5 Title Slide"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:260
+msgid "Presentation Background - Slide 5 Base Slide"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:264
+msgid "Presentation Background - Slide 5 with Quarkus Logo"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:268
+msgid "Presentation Background - Slide 5 with Code Rocks graphic"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:272
+msgid "Presentation Background - Slide 5 with Q&A"
+msgstr ""
+
+#. type: Content of: <div><div><div><h4>
+#: upstream/_includes/worldtour-abstracts.html:275
+#: upstream/_includes/worldtour-abstracts.html:298
+msgid "Slide 6 - Guitarist on Stage"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:279
+msgid "Presentation Background - Slide 6 Title Slide"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:283
+msgid "Presentation Background - Slide 6 Base Slide"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:287
+msgid "Presentation Background - Slide 6 with Quarkus Logo"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:291
+msgid "Presentation Background - Slide 6 with Code Rocks graphic"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:295
+msgid "Presentation Background - Slide 6 with Q&A"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:302
+msgid "Presentation Background - Gradient Title Slide"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:306
+msgid "Presentation Background - Gradient Base Slide"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:310
+msgid "Presentation Background - Gradient with Quarkus Logo"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:314
+msgid "Presentation Background - Gradient with Code Rocks graphic"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:318
+msgid "Presentation Background - Gradient with Q&A"
+msgstr ""
+
+#. type: Content of: <div><div><div><h4>
+#: upstream/_includes/worldtour-abstracts.html:321
+msgid "Content Background"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:325
+msgid "Presentation Background - Base Content Light"
+msgstr ""
+
+#. type: Content of: <div><div><div><img><p>
+#: upstream/_includes/worldtour-abstracts.html:329
+msgid "Presentation Background - Base Content Dark"
 msgstr ""
