Add some translations

--- a/l10n/po/ja_JP/_guides/hibernate-search-orm-elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-search-orm-elasticsearch.adoc.po
@@ -3,31 +3,30 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-30 14:04+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-04-02 20:20+0900\n"
+"Language: om\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Hibernate Search guide"
-msgstr "Quarkus - Hibernate検索ガイド"
+msgstr "Quarkus - Hibernate Search ガイド"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:11
-#, fuzzy
 msgid "You have a Hibernate ORM-based application? You want to provide a full-featured full-text search to your users? You're at the right place."
 msgstr "Hibernate ORMベースのアプリケーションをお持ちですか?フル機能のフルテキスト検索をユーザーに提供したいですか?あなたは正しい場所にいます。"
 
@@ -50,9 +49,8 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:20
-#, fuzzy
 msgid "less than 20 minutes"
-msgstr "二十分弱"
+msgstr "20分弱"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:21
@@ -71,15 +69,13 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:24
-#, fuzzy
 msgid "Docker"
-msgstr "ドッカー"
+msgstr "Docker"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:25
-#, fuzzy
 msgid "link:building-native-image[GraalVM installed if you want to run in native mode]"
-msgstr "link:building-native-image[ネイティブモードで動作させたい場合は、GraalVMをインストールしてください。]"
+msgstr "link:building-native-image[ネイティブモードで動作させたい場合は、GraalVMがインストールされていること]"
 
 #. type: Title ==
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:26
@@ -177,7 +173,6 @@ msgstr "Hibernate Search + Elasticsearch。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:67
-#, fuzzy
 msgid "RESTEasy and Jackson."
 msgstr "RESTEasyとJackson。"
 
@@ -222,7 +217,6 @@ msgstr "ベアエンティティーの作成"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:96
-#, fuzzy
 msgid "First, let's create our Hibernate ORM entities `Book` and `Author` in the `model` subpackage."
 msgstr "まず、 `model` サブパッケージに Hibernate ORM エンティティー `Book` と `Author` を作成しましょう。"
 
@@ -335,7 +329,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:142
-#, fuzzy
 msgid "We are using Hibernate ORM with Panache, it is not mandatory."
 msgstr "PanacheでHibernate ORMを使用していますが、必須ではありません。"
 
