--- a/l10n/po/ja_JP/_guides/security-openid-connect-multitenancy.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-multitenancy.adoc.po
@@ -88,9 +88,8 @@ msgstr "link:https://stedolan.github.io/jq/[ジェイキューツール]"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:29
-#, fuzzy
 msgid "Docker"
-msgstr "ドッカー"
+msgstr "Docker"
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-multitenancy.adoc:30
