--- a/l10n/po/ja_JP/_guides/credentials-provider.adoc.po
+++ b/l10n/po/ja_JP/_guides/credentials-provider.adoc.po
@@ -119,9 +119,8 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:55
-#, fuzzy
 msgid "Docker installed"
-msgstr "Dockerのインストール"
+msgstr "Dockerがインストールされていること"
 
 #. type: Title ==
 #: upstream/_guides/credentials-provider.adoc:56
