--- a/l10n/po/ja_JP/_guides/vault-transit.adoc.po
+++ b/l10n/po/ja_JP/_guides/vault-transit.adoc.po
@@ -131,9 +131,8 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_guides/vault-transit.adoc:47
-#, fuzzy
 msgid "Docker installed"
-msgstr "Dockerのインストール"
+msgstr "Dockerがインストールされていること"
 
 #. type: Title ==
 #: upstream/_guides/vault-transit.adoc:48
