--- a/l10n/po/ja_JP/_guides/vault.adoc.po
+++ b/l10n/po/ja_JP/_guides/vault.adoc.po
@@ -3,75 +3,68 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-30 14:04+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-04-02 21:35+0900\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"Language: ja\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/vault.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Using HashiCorp Vault"
-msgstr "Quarkus - Using HashiCorp Vault"
+msgstr "Quarkus - HashiCorp Vaultの使用"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:21
-#, fuzzy
 msgid "https://www.vaultproject.io/[HashiCorp Vault] is a multi-purpose tool aiming at protecting sensitive data, such as credentials, certificates, access tokens, encryption keys, ... In the context of Quarkus, several use cases are supported:"
 msgstr "link:https://www.vaultproject.io/[HashiCorp Vault] は、クレデンシャル、証明書、アクセストークン、暗号化キーなどの機密データの保護を目的とした多目的ツールです。"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:24
-#, fuzzy
 msgid "mounting a map of properties stored into the https://www.vaultproject.io/docs/secrets/kv/index.html[Vault kv secret engine] as an Eclipse MicroProfile config source"
 msgstr "link:https://www.vaultproject.io/docs/secrets/kv/index.html[Vault kv シークレットエンジン] に保存されたプロパティーのマップを Eclipse MicroProfile の設定ソースとしてマウントします。"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:25
-#, fuzzy
 msgid "fetching credentials from Vault when configuring an Agroal datasource, as documented in the {vault-datasource-guide}"
 msgstr "Agroal データソースを構成する際に、{vault-datasource-guide} で説明されているように、Vault から資格情報をフェッチします。"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:26
-#, fuzzy
 msgid "accessing Vault _kv secret engine_ programmatically"
-msgstr "Vault _kv の秘密エンジンに_ プログラムでアクセスする"
+msgstr "Vault _kv のシークレットエンジンに_ プログラムでアクセスする"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:27
-#, fuzzy
 msgid "support for the https://www.vaultproject.io/docs/secrets/totp[TOTP Secret Engine]"
-msgstr "link:https://www.vaultproject.io/docs/secrets/totp[TOTPシークレットエンジンの] サポート"
+msgstr "link:https://www.vaultproject.io/docs/secrets/totp[TOTPシークレットエンジン] のサポート"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:29
-#, fuzzy
 msgid "support for the https://www.vaultproject.io/docs/secrets/transit[Transit Secret Engine] as documented in the {vault-transit-guide}"
-msgstr "link:https://www.vaultproject.io/docs/secrets/transit[トランジットシークレットエンジンの] サポートは {vault-transit-guide} で文書化されています。"
+msgstr "link:https://www.vaultproject.io/docs/secrets/transit[トランジットシークレットエンジン] のサポートは {vault-transit-guide} で文書化されています。"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:30
-#, fuzzy
 msgid "support for several authentication methods as documented in the {vault-auth-guide}"
-msgstr "で説明されているように、いくつかの認証方法をサポートしています。"
+msgstr "{vault-auth-guide} で説明されているように、いくつかの認証方法をサポート"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:33
-#, fuzzy
 msgid "Under the hood, the Quarkus Vault extension takes care of authentication when negotiating a client Vault token plus any transparent token or lease renewals according to _ttl_ and _max-ttl._"
-msgstr "Quarkus Vaultエクステンションでは、クライアントのVaultトークンをネゴシエートする際の認証と、 _ttl_ と _max-ttl_ に応じた透過的なトークンやリースの更新を行います _。_"
+msgstr "Quarkus Vaultエクステンションでは、クライアントのVaultトークンをネゴシエートする際の認証と、 _ttl_ と _max-ttl_ に応じた透過的なトークンやリースの更新を行います"
 
 #. type: Title ==
 #: upstream/_guides/vault.adoc:36
@@ -86,7 +79,6 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:41
-#, fuzzy
 msgid "roughly 20 minutes"
 msgstr "ざっと20分"
 
@@ -107,19 +99,17 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:45
-#, fuzzy
 msgid "Docker installed"
-msgstr "Dockerのインストール"
+msgstr "Dockerがインストールされていること"
 
 #. type: Title ==
 #: upstream/_guides/vault.adoc:46
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Starting Vault"
-msgstr "ボールトを起動する"
+msgstr "ボールトの起動"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:49
-#, fuzzy
 msgid "Let's start Vault in development mode:"
 msgstr "開発モードでVaultを起動してみましょう。"
 
@@ -131,9 +121,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:56
-#, fuzzy
 msgid "You can check that vault is running with:"
-msgstr "でVaultが実行されていることを確認することができます。"
+msgstr "次のコマンドでVaultが実行されていることを確認することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/vault.adoc:59
@@ -145,9 +134,8 @@ msgstr ""
 #: upstream/_guides/vault.adoc:62 upstream/_guides/vault.adoc:198
 #: upstream/_guides/vault.adoc:226 upstream/_guides/vault.adoc:320
 #: upstream/_guides/vault.adoc:370
-#, fuzzy
 msgid "You should see:"
-msgstr "見た方がいいですよ。"
+msgstr "次のような出力が得られるはずです。"
 
 #. type: delimited block -
 #: upstream/_guides/vault.adoc:66
@@ -567,7 +555,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:305
-#, fuzzy
 msgid "Now compile the application and run it:"
 msgstr "では、アプリケーションをコンパイルして実行してみましょう。"
 
@@ -581,7 +568,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:313
-#, fuzzy
 msgid "Finally test the new endpoint:"
 msgstr "最後に新しいエンドポイントをテストします。"
 
